--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,5 +36,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PS'
 - !lcsh 'Fiction'
+- GITenberg
 title: The Husbands of Edith
 url: http://www.gutenberg.org/ebooks/16719
